--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Reem+Kufi|Slabo+27px">
 </head>
 <body>
-  hi
+  <a href="./recipes/index.html">My Recipes</a>
 
 </body>
 </html>
