--- a/recipes/index.html
+++ b/recipes/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="top">
-    <h1><a href="index.html">Kate's No BS Recipe Collection</a></h1>
+    <h1><a href="index.html">Kate's Simple Recipe Collection</a></h1>
   </div>
   <div id="padding">
   </div>
