wording changes, added calories section

--- a/recipes/Gnocchi_With_Pomodoro_Sauce.html
+++ b/recipes/Gnocchi_With_Pomodoro_Sauce.html
@@ -14,10 +14,10 @@
     <h2>Gnocchi with Pomodoro Sauce</h2>
     <table>
       <tr>
-        <td class="td_recipe">Prep Time: 5 Minutes</td>
+        <td class="td_recipe">Prep Time: 0 Minutes</td>
         <td class="td_recipe">Cook Time: 50 Minutes</td>
-        <td class="td_recipe">Total Time: 55 Minutes</td>
-        <td class="td_recipe">Serving Size: 6</td>
+        <td class="td_recipe">Total Time: 50 Minutes</td>
+        <td class="td_recipe">Serves: 6</td>
 		<td class="td_recipe">Calories per serving: 444</td> <!--totals cals: 2660.45--->
       </tr>
     </table>
