--- a/recipes/Buffalo_Quinoa_Bites.html
+++ b/recipes/Buffalo_Quinoa_Bites.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="top">
-    <h1><a href="index.html">Kate's No BS Recipe Collection</a></h1>
+    <h1><a href="index.html">Kate's Simple Recipe Collection</a></h1>
   </div>
   <div id="padding">
   </div>
@@ -17,7 +17,7 @@
         <td class="td_recipe">Prep Time: 5 Minutes</td>
         <td class="td_recipe">Cook Time: 30 Minutes</td>
         <td class="td_recipe">Total Time: 35 Minutes</td>
-        <td class="td_recipe">Serving Size: 4</td>
+        <td class="td_recipe">Serves: 4</td>
       </tr>
     </table>
 
