--- a/recipes/Buffalo_Quinoa_Bites.html
+++ b/recipes/Buffalo_Quinoa_Bites.html
@@ -18,6 +18,7 @@
         <td class="td_recipe">Cook Time: 30 Minutes</td>
         <td class="td_recipe">Total Time: 35 Minutes</td>
         <td class="td_recipe">Serves: 4</td>
+		<td class="td_recipe">Calories per serving: ---</td>
       </tr>
     </table>
 
