--- a/recipes/Peanut_Tofu_Buddha_Bowl.html
+++ b/recipes/Peanut_Tofu_Buddha_Bowl.html
@@ -18,6 +18,7 @@
         <td class="td_recipe">Cook Time: 45 Minutes</td>
         <td class="td_recipe">Total Time: 50 Minutes</td>
         <td class="td_recipe">Serves: 4</td>
+		<td class="td_recipe">Calories per serving: ---</td>
       </tr>
     </table>
 
