--- a/recipes/index.html
+++ b/recipes/index.html
@@ -12,8 +12,8 @@
   </div>
 
   <div id="intro">
-    <p>This is a collection of recipes that I have found on the internet and tried at home!
-      I love cooking and have found it really useful to have a mobile copy of the recipes that I am making, but too often, the sites/blogs that have the recipes are bogged down by ads and other extras that I just don't need!
+    <p>This is a collection of recipes that I have found on the internet and tried at home.
+      I love cooking and have found it really useful to have a mobile copy of the recipes that I am making, but too often, the sites/blogs that have the recipes are bogged down by ads and other extras that I just don't need.
       I have created this page to enable better organization of recipes I love in order to read them on my phone while cooking and sharing them with my friends and family! </p>
       <p>~Enjoy, Kate~</p>
     </div>
