--- a/recipes/Buffalo_Quinoa_Bites.html
+++ b/recipes/Buffalo_Quinoa_Bites.html
@@ -18,7 +18,7 @@
         <td class="td_recipe">Cook Time: 30 Minutes</td>
         <td class="td_recipe">Total Time: 35 Minutes</td>
         <td class="td_recipe">Serves: 4</td>
-		<td class="td_recipe">Calories per serving: ---</td>
+		<td class="td_recipe">Calories per serving: 454<p>(Not including Ranch/Blue Cheese Dressing)</td><!--- total cals: 1816 --->
       </tr>
     </table>
 
@@ -28,15 +28,15 @@
         <td class="td_ingredients">
           <h4>Ingredients</h4>
           <ul>
-            <li>1/4c uncooked quinoa</li>
+            <li>1/4c uncooked quinoa</li><!--- cals: 446 --->
             <li>1/2c water</li>
-            <li>1c cannellini beans, mashed</li>
-            <li>1/2c panko bread crumbs</li>
-            <li>1 large egg, lightly beaten</li>
+            <li>1c cannellini beans, mashed</li><!--- cals: 255 --->
+            <li>1/2c panko bread crumbs</li><!--- cals: 220 --->
+            <li>1 large egg, lightly beaten</li><!--- cals: 77 --->
             <li>1/2 tsp salt</li>
             <li>1 tsp pepper</li>
-            <li>3 Tbsp olive oil</li>
-            <li>1/4c Frank's buffalo sauce</li>
+            <li>3 Tbsp olive oil</li><!--- cals: 372 --->
+            <li>1/4c Frank's buffalo sauce</li><!--- cals: 446 --->
 			<li>Ranch or Blue Cheese Dressing (optional)</li>
           </ul>
 
