--- a/recipes/index.html
+++ b/recipes/index.html
@@ -26,7 +26,7 @@
           <h2>Buffalo Quinoa Bites</h2>
           <h3><a href="Buffalo_Quinoa_Bites.html">Kate's Version</h3>
             <img src=https://s-media-cache-ak0.pinimg.com/564x/57/c1/63/57c163c82156be6dce118ebe647bd6f3.jpg class="recipe_pic" />
-            <a href="http://betsylife.com/buffalo-quinoa-bites/">Original Recipe</a>
+            <a href="https://www.halfbakedharvest.com/crispy-buffalo-quinoa-bites-salad/">Original Recipe</a>
           </td>
           <td class="td_front">
             <h2>Peanut Tofu Buddha Bowl</h2>
