--- a/recipes/Peanut_Tofu_Buddha_Bowl.html
+++ b/recipes/Peanut_Tofu_Buddha_Bowl.html
@@ -18,7 +18,7 @@
         <td class="td_recipe">Cook Time: 45 Minutes</td>
         <td class="td_recipe">Total Time: 50 Minutes</td>
         <td class="td_recipe">Serves: 4</td>
-		<td class="td_recipe">Calories per serving: ---</td>
+		<td class="td_recipe">Calories per serving: 425</td><!--- cals: 1700.25 --->
       </tr>
     </table>
 
@@ -29,20 +29,20 @@
           <h4>Ingredients</h4>
           <ul>
 		    <li><b>Bowl Contents</b></li>
-            <li>1 cup uncooked rice</li>
-            <li>1 cup shredded carrot</li>
+            <li>1 cup uncooked rice</li> <!--- cals: 426--->
+            <li>1 cup shredded carrot</li><!--- cals: 25 --->
             <li>2 cups fresh spinach</li>
-            <li>2 cups broccoli florets</li>
-            <li>2 teaspoons olive oil (divided)</li>
-            <li>1 cup chickpeas (drained and rinsed if canned)</li>
+            <li>2 cups broccoli florets</li><!--- cals: 62 --->
+            <li>2 teaspoons olive oil (divided)</li><!--- cals: 248 --->
+            <li>1 cup chickpeas (drained and rinsed if canned)</li><!--- cals: 200 --->
             <li>1 tsp pepper</li>
 			<li>1 tsp salt</li>
 			<li><b>Peanut Sauce</b></li>
-            <li>2 tablespoons sesame oil</li>
-            <li>1/4 cup soy sauce</li>
-			<li>1/4 cup maple syrup</li>
-			<li>2 teaspoons sriracha</li>
-			<li>1/4 cup peanut butter</li>
+            <li>2 tablespoons sesame oil</li><!--- cals: 80 --->
+            <li>1/4 cup soy sauce</li><!--- cals: 43.25 --->
+			<li>1/4 cup maple syrup</li><!--- cals: 210 --->
+			<li>2 teaspoons sriracha</li><!--- cals: 30 --->
+			<li>1/4 cup peanut butter</li><!--- cals: 376 --->
           </ul>
 
         </td>
