--- a/recipes/Buffalo_Quinoa_Bites.html
+++ b/recipes/Buffalo_Quinoa_Bites.html
@@ -18,7 +18,7 @@
         <td class="td_recipe">Cook Time: 30 Minutes</td>
         <td class="td_recipe">Total Time: 35 Minutes</td>
         <td class="td_recipe">Serves: 4</td>
-		<td class="td_recipe">Calories per serving: 454<p>(Not including Ranch/Blue Cheese Dressing)</td><!--- total cals: 1816 --->
+		<td class="td_recipe">Calories per serving: 345<p>(Not including Ranch/Blue Cheese Dressing)</td><!--- total cals: 1370 --->
       </tr>
     </table>
 
@@ -36,7 +36,7 @@
             <li>1/2 tsp salt</li>
             <li>1 tsp pepper</li>
             <li>3 Tbsp olive oil</li><!--- cals: 372 --->
-            <li>1/4c Frank's buffalo sauce</li><!--- cals: 446 --->
+            <li>1/4c Frank's buffalo sauce</li>
 			<li>Ranch or Blue Cheese Dressing (optional)</li>
           </ul>
 
